Bug 1581876 - Fix IntersectionObserver's rect to include all continuations. r=mstange

This does the same thing that getBoundingClientRect() does, which is
what the spec asks for, and thus fixes the intersection ratio for split
inlines where the first continuation is empty for example.

Differential Revision: https://phabricator.services.mozilla.com/D85385